k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exam-app-network-policy
  namespace: exam
spec:
  podSelector:
    matchLabels:
      app: exam-app

  policyTypes:
    - Ingress
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: exam-db
      ports:
        - protocol: TCP
          port: 1521

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
